Tweak the design a little

--- a/SimpleWeatherForecast/src/main/res/layout/fragment_forecast.xml
+++ b/SimpleWeatherForecast/src/main/res/layout/fragment_forecast.xml
@@ -12,7 +12,10 @@
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="22/05/2012"
         android:id="@+id/textView"
-        android:layout_gravity="center_horizontal" />
+        android:layout_gravity="center_horizontal"
+        android:textColor="@color/text_palette_one"
+        android:textSize="@dimen/text_medium"
+        android:fontFamily="sans-serif-light" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -20,7 +23,10 @@
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="scattered cloud"
         android:id="@+id/textView"
-        android:layout_gravity="center_horizontal" />
+        android:layout_gravity="center_horizontal"
+        android:textColor="@color/text_palette_one"
+        android:textSize="@dimen/text_medium"
+        android:fontFamily="sans-serif-light"/>
 
     <TextView
         android:layout_width="wrap_content"
@@ -28,7 +34,10 @@
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="22°C"
         android:id="@+id/textView"
-        android:layout_gravity="center_horizontal" />
+        android:layout_gravity="center_horizontal"
+        android:textColor="@color/text_palette_one"
+        android:textSize="@dimen/text_large"
+        android:fontFamily="sans-serif-light" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -36,5 +45,8 @@
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="humidity 85%"
         android:id="@+id/textView"
-        android:layout_gravity="center_horizontal" />
+        android:layout_gravity="center_horizontal"
+        android:textColor="@color/text_palette_one"
+        android:textSize="@dimen/text_medium"
+        android:fontFamily="sans-serif-light" />
 </LinearLayout>
