--- a/SimpleWeatherForecast/src/main/res/values/dimens.xml
+++ b/SimpleWeatherForecast/src/main/res/values/dimens.xml
@@ -2,5 +2,6 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
-
-    </resources>
+    <dimen name="text_medium">30dp</dimen>
+    <dimen name="text_large">70dp</dimen>
+</resources>
