--- a/SimpleWeatherForecast/src/main/res/layout/fragment_forecast.xml
+++ b/SimpleWeatherForecast/src/main/res/layout/fragment_forecast.xml
@@ -9,6 +9,13 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:id="@+id/forecast_fragment_position"
+        android:layout_gravity="center_horizontal" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="22/05/2012"
         android:id="@+id/textView"
