--- a/SimpleWeatherForecast/src/main/res/values/colors.xml
+++ b/SimpleWeatherForecast/src/main/res/values/colors.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="background_default">#AAFEE4CD</color>
-    <color name="text_palette_one">#515556</color>
+    <color name="text_palette_one">#FFFFFF</color>
 </resources>
