--- a/SimpleWeatherForecast/src/main/res/values/colors.xml
+++ b/SimpleWeatherForecast/src/main/res/values/colors.xml
@@ -2,4 +2,5 @@
 <resources>
     <color name="background_default">#AAFEE4CD</color>
     <color name="text_palette_one">#FFFFFF</color>
+    <color name="background_view_pager">#3C000000</color>
 </resources>
