--- a/SimpleWeatherForecast/src/main/res/values/colors.xml
+++ b/SimpleWeatherForecast/src/main/res/values/colors.xml
@@ -3,4 +3,5 @@
     <color name="background_default">#AAFEE4CD</color>
     <color name="text_palette_one">#FFFFFF</color>
     <color name="background_view_pager">#3C000000</color>
+    <color name="holo_blue">#33B5E5</color>
 </resources>
