Add an about fragment.

--- a/SimpleWeatherForecast/src/main/res/menu/main.xml
+++ b/SimpleWeatherForecast/src/main/res/menu/main.xml
@@ -8,9 +8,15 @@
         android:orderInCategory="1"
         app:showAsAction="never" />
 
+    <item android:id="@+id/menu_item_about"
+        android:title="About"
+        android:orderInCategory="2"
+        app:showAsAction="never" />
+
     <item android:id="@+id/menu_item_license"
         android:title="License"
         android:orderInCategory="3"
         app:showAsAction="never" />
+
 
 </menu>
