Show min and max temperature instead of the humidity

--- a/SimpleWeatherForecast/src/main/res/layout/fragment_forecast.xml
+++ b/SimpleWeatherForecast/src/main/res/layout/fragment_forecast.xml
@@ -28,12 +28,24 @@
         android:textSize="@dimen/text_large"
         android:fontFamily="sans-serif-light" />
 
+    <!--
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="humidity 85%"
         android:id="@+id/fragment_forecast_humidity"
+        android:layout_gravity="center_horizontal"
+        android:textColor="@color/text_palette_one"
+        android:textSize="@dimen/text_medium"
+        android:fontFamily="sans-serif-light" />
+    -->
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:id="@+id/fragment_forecast_min_max"
         android:layout_gravity="center_horizontal"
         android:textColor="@color/text_palette_one"
         android:textSize="@dimen/text_medium"
