--- a/SimpleWeatherForecast/src/main/res/values/arrays.xml
+++ b/SimpleWeatherForecast/src/main/res/values/arrays.xml
@@ -13,4 +13,13 @@
         <item>@string/temperature_unit_fahrenheit_symbol</item>
         <item>@string/temperature_unit_kelvin_symbol</item>
     </string-array>
+
+    <!-- Colors used for the background -->
+    <integer-array name="background_colors">
+        <item>@color/holo_blue</item>
+        <item>@color/holo_purple</item>
+        <item>@color/holo_yellow</item>
+        <item>@color/holo_red</item>
+        <item>@color/holo_green</item>
+    </integer-array>
 </resources>
