--- a/SimpleWeatherForecast/src/main/res/values/colors.xml
+++ b/SimpleWeatherForecast/src/main/res/values/colors.xml
@@ -11,5 +11,10 @@
     <color name="text_more_apps_on">#66000000</color>
     <color name="text_more_apps_off">#FF000000</color>
 
+    <!-- More apps dialog fragment -->
+    <color name="row_more_apps_background">#CC999999</color>
+    <color name="row_more_apps_title_background">#CC333333</color>
+    <color name="row_more_apps_title">#FFFFFFFF</color>
+
 
 </resources>
