Set the action bar background in the xml

--- a/SimpleWeatherForecast/src/main/res/values/colors.xml
+++ b/SimpleWeatherForecast/src/main/res/values/colors.xml
@@ -10,6 +10,7 @@
     <color name="holo_green">#99CC00</color>
     <color name="text_more_apps_on">#66000000</color>
     <color name="text_more_apps_off">#FF000000</color>
+    <color name="black_translucent">#82000000</color>
 
     <!-- More apps dialog fragment -->
     <color name="row_more_apps_background">#CC999999</color>
