--- a/SimpleWeatherForecast/src/main/res/values/styles.xml
+++ b/SimpleWeatherForecast/src/main/res/values/styles.xml
@@ -3,6 +3,15 @@
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
         <!-- Customize your theme here. -->
+        <item name="android:actionBarStyle">@style/AppTheme.ActionBarStyle</item>
+        <!-- Support library compatibility -->
+        <item name="actionBarStyle">@style/AppTheme.ActionBarStyle</item>
+    </style>
+
+    <style name="AppTheme.ActionBarStyle" parent="@style/Widget.AppCompat.Light.ActionBar.Solid.Inverse">
+        <item name="android:background">@color/black_translucent</item>
+        <!-- Support library compatibility -->
+        <item name="background">@color/black_translucent</item>
     </style>
 
 </resources>
