--- a/SimpleWeatherForecast/src/main/res/layout/activity_support.xml
+++ b/SimpleWeatherForecast/src/main/res/layout/activity_support.xml
@@ -15,8 +15,7 @@
         android:padding="@dimen/support_list_padding"
         android:layout_alignParentTop="true"
         android:clipToPadding="false"
-        android:scrollbarThumbVertical="@drawable/support_scroll_bar"
-        android:scrollbarStyle="outsideOverlay"
+        android:scrollbarStyle="outsideInset"
         android:listSelector="@android:color/transparent" />
 
     <ProgressBar
