--- a/SimpleWeatherForecast/src/main/res/layout/activity_support.xml
+++ b/SimpleWeatherForecast/src/main/res/layout/activity_support.xml
@@ -15,7 +15,7 @@
         android:padding="@dimen/support_list_padding"
         android:layout_alignParentTop="true"
         android:clipToPadding="false"
-        android:scrollbarStyle="outsideInset"
+        android:scrollbarStyle="outsideOverlay"
         android:listSelector="@android:color/transparent" />
 
     <ProgressBar
