Tweak more apps alert dialog UI

--- a/SimpleWeatherForecast/src/main/res/layout/dialog_more_apps.xml
+++ b/SimpleWeatherForecast/src/main/res/layout/dialog_more_apps.xml
@@ -10,4 +10,5 @@
     android:dividerHeight="@dimen/default_padding"
     android:drawSelectorOnTop="true"
     android:listSelector="@drawable/selector_more_apps"
-    android:padding="@dimen/default_padding" />
+    android:padding="@dimen/default_padding"
+    android:scrollbarStyle="outsideOverlay" />
