--- a/SimpleWeatherForecast/src/main/res/values-fr/support.xml
+++ b/SimpleWeatherForecast/src/main/res/values-fr/support.xml
@@ -12,7 +12,7 @@
     <string name="support_title">Support free content app and help us bringing our open-source projects to life.</string>
     <string name="support_error">Fail to load coffee list. \n Please, check your network connection.</string>
     <string name="support_thanks_positive_btn">Merci !</string>
-    <string name="support_has_supported_us">Thanks for your support!</string>
+    <string name="support_has_supported_us">Merci de votre soutient !</string>
     <string name="support_thanks">We are very grateful for your support ! This %1$s will help us to develop more free content apps !</string>
     <string name="support_bar_text"> %1$d %%</string>
 </resources>
