--- a/SimpleWeatherForecast/src/main/res/layout/row_app_widget.xml
+++ b/SimpleWeatherForecast/src/main/res/layout/row_app_widget.xml
@@ -3,14 +3,33 @@
 <LinearLayout
     android:id="@+id/row_app_widget_root"
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:padding="@dimen/default_padding">
+
+    <TextView
+        android:id="@+id/row_app_widget_weather"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:textColor="@android:color/white"
+        tools:text="pluies modérées" />
 
     <TextView
         android:id="@+id/row_app_widget_temperature"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        android:text="New Text" />
+        android:textColor="@android:color/white"
+        tools:text="20.4°C" />
+
+    <TextView
+        android:id="@+id/row_app_widget_min_max"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:textColor="@android:color/white"
+        tools:text="12~22" />
 </LinearLayout>
