--- a/SimpleWeatherForecast/src/main/res/values/colors.xml
+++ b/SimpleWeatherForecast/src/main/res/values/colors.xml
@@ -18,5 +18,7 @@
     <color name="row_more_apps_title_background">#CC333333</color>
     <color name="row_more_apps_title">#FFFFFFFF</color>
 
+    <!-- App Widget -->
+    <color name="app_widget_background">#77000000</color>
 
 </resources>
