--- a/SimpleWeatherForecast/src/main/res/layout/row_app_widget.xml
+++ b/SimpleWeatherForecast/src/main/res/layout/row_app_widget.xml
@@ -18,29 +18,29 @@
 
         <TextView
             android:id="@+id/row_app_widget_date"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
             android:layout_marginBottom="4dp"
             android:fontFamily="sans-serif-light"
+            android:gravity="center"
             android:textColor="@android:color/white"
             tools:text="Mercredi 18 Juin" />
 
         <TextView
             android:id="@+id/row_app_widget_weather"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
             android:fontFamily="sans-serif-light"
+            android:gravity="center"
             android:textColor="@android:color/white"
             tools:text="pluies modérées" />
 
         <TextView
             android:id="@+id/row_app_widget_temperature"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
             android:fontFamily="sans-serif-light"
+            android:gravity="center"
             android:textColor="@android:color/white"
             tools:text="20.4°C" />
 
