--- a/SimpleWeatherForecast/src/main/res/xml/app_widget_provider.xml
+++ b/SimpleWeatherForecast/src/main/res/xml/app_widget_provider.xml
@@ -6,4 +6,5 @@
     android:minWidth="110dp"
     android:resizeMode="horizontal|vertical"
     android:updatePeriodMillis="7320000"
-    android:widgetCategory="home_screen|keyguard" />
+    android:widgetCategory="home_screen|keyguard"
+    android:previewImage="@drawable/preview_app_widget"/>
