--- a/SimpleWeatherForecast/src/main/res/values-v19/styles.xml
+++ b/SimpleWeatherForecast/src/main/res/values-v19/styles.xml
@@ -1,24 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <!-- Base application theme. -->
+    <!-- Application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
-        <item name="android:actionBarStyle">@style/AppTheme.ActionBarStyle</item>
-        <item name="android:actionBarWidgetTheme">@style/AppTheme.ActionBarWidgetTheme</item>
+        <!-- Support library compatibility -->
+        <item name="actionBarStyle">@style/AppTheme.ActionBarStyle</item>
+
         <item name="android:windowTranslucentStatus">true</item>
         <item name="android:windowTranslucentNavigation">true</item>
     </style>
 
     <style name="AppTheme.ActionBarStyle" parent="@style/Widget.AppCompat.Light.ActionBar.Solid.Inverse">
         <item name="android:background">@android:color/transparent</item>
-    </style>
-
-    <style name="AppTheme.PopupMenu" parent="@style/Widget.AppCompat.Light.PopupMenu">
-        <item name="android:popupBackground">@color/black_translucent_dark</item>
-    </style>
-
-    <style name="AppTheme.ActionBarWidgetTheme" parent="Theme.AppCompat">
-        <item name="android:popupMenuStyle">@style/AppTheme.PopupMenu</item>
+        <item name="background">@android:color/transparent</item>
     </style>
 
 </resources>
