--- a/SimpleWeatherForecast/src/main/res/values/dimens.xml
+++ b/SimpleWeatherForecast/src/main/res/values/dimens.xml
@@ -2,9 +2,11 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
-    <dimen name="text_medium">30dp</dimen>
-    <dimen name="text_large">70dp</dimen>
     <dimen name="default_padding">8dp</dimen>
+
+    <!-- Forecast fragment -->
+    <dimen name="fragment_forecast_text_medium">30dp</dimen>
+    <dimen name="fragment_forecast_text_large">70dp</dimen>
 
     <!-- More apps dialog fragment -->
     <dimen name="dialog_more_app_app_name_padding">32dp</dimen>
