--- a/SimpleWeatherForecast/src/main/res/values/dimens.xml
+++ b/SimpleWeatherForecast/src/main/res/values/dimens.xml
@@ -5,8 +5,8 @@
     <dimen name="default_padding">8dp</dimen>
 
     <!-- Forecast fragment -->
-    <dimen name="fragment_forecast_text_medium">30dp</dimen>
-    <dimen name="fragment_forecast_text_large">70dp</dimen>
+    <dimen name="fragment_forecast_text_medium">30sp</dimen>
+    <dimen name="fragment_forecast_text_large">60sp</dimen>
 
     <!-- More apps dialog fragment -->
     <dimen name="dialog_more_app_app_name_padding">32dp</dimen>
