--- a/SimpleWeatherForecast/src/main/res/values/colors.xml
+++ b/SimpleWeatherForecast/src/main/res/values/colors.xml
@@ -13,6 +13,8 @@
     <color name="black_translucent">#82000000</color>
     <color name="black_translucent_dark">#DD222222</color>
 
+    <color name="action_bar_background">#33000000</color>
+
     <!-- More apps dialog fragment -->
     <color name="row_more_apps_background">#CC999999</color>
     <color name="row_more_apps_title_background">#CC333333</color>
