--- a/SimpleWeatherForecast/src/main/res/values-v19/styles.xml
+++ b/SimpleWeatherForecast/src/main/res/values-v19/styles.xml
@@ -2,17 +2,9 @@
 <resources>
 
     <!-- Application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
-        <!-- Support library compatibility -->
-        <item name="actionBarStyle">@style/AppTheme.ActionBarStyle</item>
-
+    <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <item name="android:windowTranslucentStatus">true</item>
         <item name="android:windowTranslucentNavigation">true</item>
-    </style>
-
-    <style name="AppTheme.ActionBarStyle" parent="@style/Widget.AppCompat.Light.ActionBar.Solid.Inverse">
-        <item name="android:background">@android:color/transparent</item>
-        <item name="background">@android:color/transparent</item>
     </style>
 
 </resources>
